Fix jumping closing button in a very cheap way

--- a/src/components/Article/Article.css
+++ b/src/components/Article/Article.css
@@ -105,7 +105,7 @@ img {
 }
 
 .close-button {
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 0;
 }
